--- a/page-about.html
+++ b/page-about.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Digima | Digital Marketing HTML Template</title>
+	<title> The Art Management </title>
 	<!-- Stylesheets -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -15,9 +15,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css">
 	<link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
-	<link rel="shortcut icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png"
-		type="image/x-icon">
-	<link rel="icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" type="image/x-icon">
+	<link rel="icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" type="image/x-icon">
 
 	<!-- Responsive -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -135,35 +134,35 @@
 						<!--Keep This Empty / Menu will come through Javascript-->
 					</ul>
 					<ul class="contact-list-one">
-                        <li>
-                            <!-- Contact Info Box -->
-                            <div class="contact-info-box">
-                                <i class="icon lnr lnr-phone-handset"></i>
+						<li>
+							<!-- Contact Info Box -->
+							<div class="contact-info-box">
+								<i class="icon lnr lnr-phone-handset"></i>
 
-                                <span class="title">Call Now</span>
-                                <a href="tel:+92880098670">+92 (8800) - 98670</a>
-                            </div>
-                        </li>
-                        <li>
-                            <!-- Contact Info Box -->
-                            <div class="contact-info-box">
-                                <i class="icon lnr lnr-envelope"></i>
+								<span class="title">Call Now</span>
+								<a href="tel:+92880098670">+92 (8800) - 98670</a>
+							</div>
+						</li>
+						<li>
+							<!-- Contact Info Box -->
+							<div class="contact-info-box">
+								<i class="icon lnr lnr-envelope"></i>
 
-                                <span class="title">Send Email</span>
-                                <a href="/cdn-cgi/l/email-protection#aac2cfc6daeac9c5c7dacbc4d384c9c5c7"><span
-                                        class="__cf_email__"
-                                        data-cfemail="7c1419100c3c1f13110c1d1205521f1311">[email&#160;protected]</span></a>
-                            </div>
-                        </li>
-                        <li>
-                            <!-- Contact Info Box -->
-                            <div class="contact-info-box">
-                                <i class="icon lnr lnr-clock"></i>
-                                <span class="title">Send Email</span>
-                                Mon - Sat 8:00 - 6:30, Sunday - CLOSED
-                            </div>
-                        </li>
-                    </ul>
+								<span class="title">Send Email</span>
+								<a href="/cdn-cgi/l/email-protection#aac2cfc6daeac9c5c7dacbc4d384c9c5c7"><span
+										class="__cf_email__"
+										data-cfemail="7c1419100c3c1f13110c1d1205521f1311">[email&#160;protected]</span></a>
+							</div>
+						</li>
+						<li>
+							<!-- Contact Info Box -->
+							<div class="contact-info-box">
+								<i class="icon lnr lnr-clock"></i>
+								<span class="title">Send Email</span>
+								Mon - Sat 8:00 - 6:30, Sunday - CLOSED
+							</div>
+						</li>
+					</ul>
 
 
 					<ul class="social-links">
@@ -198,23 +197,22 @@
 						<!--Logo-->
 						<div class="logo">
 							<a href="index.html" title=""><img width="60" height="60"
-									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""
-									title=""></a>
+									src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt="" title=""></a>
 						</div>
 
 						<!--Right Col-->
 						<div class=" nav-outer">
-								<!-- Main Menu -->
-								<nav class="main-menu">
-									<div class="navbar-collapse show collapse clearfix">
-										<ul class="navigation clearfix">
-											<!--Keep This Empty / Menu will come through Javascript-->
-										</ul>
-									</div>
-								</nav><!-- Main Menu End-->
+							<!-- Main Menu -->
+							<nav class="main-menu">
+								<div class="navbar-collapse show collapse clearfix">
+									<ul class="navigation clearfix">
+										<!--Keep This Empty / Menu will come through Javascript-->
+									</ul>
+								</div>
+							</nav><!-- Main Menu End-->
 
-								<!--Mobile Navigation Toggler-->
-								<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+							<!--Mobile Navigation Toggler-->
+							<div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
 						</div>
 					</div>
 				</div>
@@ -327,13 +325,13 @@
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img
+								<figure class="image"><a href="talent-service-details.html"><img
 											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-2.jpg"
 											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class="icon lnr lnr-users"></i>
-								<h5 class="title"><a href="page-service-details.html">Talent & Content
+								<h5 class="title"><a href="talent-service-details.html">Talent & Content
 										<br>Management</a></h5>
 								<div class="text">We help brands and creators grow, engage, and monetize content through
 									strategic talent and content management solutions.</div>
@@ -345,13 +343,13 @@
 					<div class="service-block-four col-lg-3 col-md-6 col-sm-12">
 						<div class="inner-box">
 							<div class="image-box">
-								<figure class="image"><a href="page-service-details.html"><img
+								<figure class="image"><a href="content-service-details.html"><img
 											src="https://html.kodesolution.com/2023/disle-html/images/resource/service2-3.jpg"
 											alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<i class=" icon lnr lnr-film-play"></i>
-								<h5 class="title"><a href="page-service-details.html">Content <br>Production</a></h5>
+								<h5 class="title"><a href="content-service-details.html">Content <br>Production</a></h5>
 								<div class="text">Creating high-quality videos, blogs, social media content, and
 									multimedia production tailored to your audience.</div>
 							</div>
