--- a/news-details.html
+++ b/news-details.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Disle | Design Agency HTML Template</title>
+	<title> The Art Management</title>
 	<!-- Stylesheets -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
-	<link rel="shortcut icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png"
+	<link rel="shortcut icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG"
 		type="image/x-icon">
-	<link rel="icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png" type="image/x-icon">
+	<link rel="icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
 	<link rel="stylesheet" type="text/css" href="css/bootsnav.min.css">
