--- a/shop-products-sidebar.html
+++ b/shop-products-sidebar.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Disle | Design Agency HTML Template</title>
+    <title> The Art Management </title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png"
-        type="image/x-icon">
-    <link rel="icon" href="https://html.kodesolution.com/2023/disle-html/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" type="image/x-icon">
+    <link rel="icon" href="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootsnav.min.css">
@@ -199,23 +198,22 @@
                         <!--Logo-->
                         <div class="logo">
                             <a href="index.html" title=""><img width="60" height="60"
-                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt=""
-                                    title=""></a>
+                                    src="https://cdn.imgpile.com/f/dNX7cGu_xl.PNG" alt="" title=""></a>
                         </div>
 
                         <!--Right Col-->
                         <div class=" nav-outer">
-                                <!-- Main Menu -->
-                                <nav class="main-menu">
-                                    <div class="navbar-collapse show collapse clearfix">
-                                        <ul class="navigation clearfix">
-                                            <!--Keep This Empty / Menu will come through Javascript-->
-                                        </ul>
-                                    </div>
-                                </nav><!-- Main Menu End-->
+                            <!-- Main Menu -->
+                            <nav class="main-menu">
+                                <div class="navbar-collapse show collapse clearfix">
+                                    <ul class="navigation clearfix">
+                                        <!--Keep This Empty / Menu will come through Javascript-->
+                                    </ul>
+                                </div>
+                            </nav><!-- Main Menu End-->
 
-                                <!--Mobile Navigation Toggler-->
-                                <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
+                            <!--Mobile Navigation Toggler-->
+                            <div class="mobile-nav-toggler"><span class="icon lnr-icon-bars"></span></div>
                         </div>
                     </div>
                 </div>
