--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.css">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=revicons">
+
+
 
 
 
@@ -363,7 +366,7 @@
                                 <h5 class="title">Digital Marketing</h5>
                                 <div class="text">Social media marketing, paid ads, content marketing, email marketing,
                                     and web analytics.</div>
-                                <div class="icon-box"><i class="flaticon-medal"></i></div>
+                                <div class="icon-box"><i class="fa-solid fa-chart-line"></i></div>
                             </div>
                         </div>
                     </div>
@@ -380,7 +383,7 @@
                                 <h5 class="title">Talent & Content Management</h5>
                                 <div class="text">We help brands and creators grow, engage, and monetize their content
                                     with tailored strategies.</div>
-                                <div class="icon-box"><i class="flaticon-user-interface"></i></div>
+                                <div class="icon-box"><i class="fa-solid fa-user-tie"></i></div>
                             </div>
                         </div>
                     </div>
@@ -397,11 +400,12 @@
                                 <h5 class="title">Audio & Music Services</h5>
                                 <div class="text">From production to distribution, we offer top-tier solutions for
                                     artists and content creators.</div>
-                                <div class="icon-box"><i class="flaticon-web-design"></i></div>
+                                <div class="icon-box"><i class="fa-solid fa-music"></i></div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -421,8 +425,7 @@
                                     At The ART, we help small businesses and startups in West Africa scale and thrive.
                                     We craft the best strategy for social media management, paid ads, content creation,
                                     and email marketing strategies that drive engagement and conversions. Partner with
-                                    us
-                                    to build, grow, and sustain your brand—together.
+                                    us to build, grow, and sustain your brand—together.
                                 </div>
                             </div>
                             <ul class="list-style-two">
@@ -433,13 +436,13 @@
 
                             <div class="other-info">
                                 <div class="info-box">
-                                    <i class="icon flaticon-phone-ringing"></i>
+                                    <i class="icon fas fa-phone-alt"></i>
                                     <span class="title">Get a free Quote</span>
                                     <a href="tel:+2348101234567" class="info-text">+234 810 123 4567</a>
                                 </div>
 
                                 <div class="founded-year">
-                                    <i class="icon flaticon-trophy"></i>
+                                    <i class="icon fas fa-award"></i>
                                     <h6 class="title">Since <br> 2020</h6>
                                 </div>
 
@@ -449,6 +452,7 @@
                             </div>
                         </div>
                     </div>
+
 
                     <!-- Image Column -->
                     <div class="image-column col-lg-6 col-md-12 col-sm-12 wow fadeInLeft" data-wow-delay="600ms">
@@ -495,7 +499,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">01</span>
-                                            <i class="icon flaticon-advertising"></i>
+                                            <i class="icon fas fa-bullhorn"></i> <!-- Social Media Icon -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Social Media
                                                 <br>Management</a></h5>
@@ -507,7 +511,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">02</span>
-                                            <i class="icon flaticon-lamp-1"></i>
+                                            <i class="icon fas fa-chart-line"></i> <!-- Paid Ads & Lead Generation -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Paid Ads & <br>Lead
                                                 Generation</a></h5>
@@ -519,7 +523,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">03</span>
-                                            <i class="icon flaticon-design-2"></i>
+                                            <i class="icon fas fa-video"></i> <!-- Content Creation -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Content <br>Creation</a>
                                         </h5>
@@ -531,7 +535,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">04</span>
-                                            <i class="icon flaticon-web-design"></i>
+                                            <i class="icon fas fa-chart-pie"></i> <!-- Brand Growth Strategy -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Brand Growth
                                                 <br>Strategy</a></h5>
@@ -543,7 +547,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">05</span>
-                                            <i class="icon flaticon-web"></i>
+                                            <i class="icon fas fa-envelope"></i> <!-- Email & Influencer Marketing -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Email & <br>Influencer
                                                 Marketing</a></h5>
@@ -555,7 +559,7 @@
                                     <div class="inner-box">
                                         <div class="icon-box">
                                             <span class="count">06</span>
-                                            <i class="icon flaticon-android-logo"></i>
+                                            <i class="icon fas fa-user-tie"></i> <!-- Talent & Personal Branding -->
                                         </div>
                                         <h5 class="title"><a href="page-service-details.html">Talent & <br>Personal
                                                 Branding</a></h5>
@@ -581,6 +585,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
         <!-- End Services Section -->
@@ -719,65 +724,65 @@
             <div class="auto-container">
                 <div class="fact-counter">
                     <div class="row">
-                        <!-- Counter block-->
+                        <!-- Counter block -->
                         <div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
                             <div class="inner">
-                                <div class="icon-box"><i class="flaticon-satisfaction"></i></div>
+                                <div class="icon-box"><i class="fas fa-check-circle"></i></div>
                                 <div class="count-box"><span class="count-text" data-speed="3000"
                                         data-stop="8600">0</span></div>
                                 <h4 class="counter-title">Projects Completed</h4>
                             </div>
                         </div>
 
-                        <!--Counter block-->
+                        <!-- Counter block -->
                         <div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="300ms">
                             <div class="inner">
-                                <div class="icon-box"><i class="flaticon-discuss"></i></div>
+                                <div class="icon-box"><i class="fas fa-users"></i></div>
                                 <div class="count-box"><span class="count-text" data-speed="3000"
                                         data-stop="680">0</span></div>
                                 <h4 class="counter-title">Active Clients</h4>
                             </div>
                         </div>
 
-                        <!--Counter block-->
+                        <!-- Counter block -->
                         <div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="600ms">
                             <div class="inner">
-                                <div class="icon-box"><i class="flaticon-instructor"></i></div>
+                                <div class="icon-box"><i class="fas fa-user-tie"></i></div>
                                 <div class="count-box"><span class="count-text" data-speed="3000"
                                         data-stop="102">0</span></div>
                                 <h4 class="counter-title">Expert People</h4>
                             </div>
                         </div>
 
-                        <!--Counter block-->
+                        <!-- Counter block -->
                         <div class="counter-block col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="900ms">
                             <div class="inner">
-                                <div class="icon-box"><i class="flaticon-reputation"></i></div>
+                                <div class="icon-box"><i class="fas fa-smile"></i></div>
                                 <div class="count-box"><span class="count-text" data-speed="3000"
                                         data-stop="7430">0</span></div>
                                 <h4 class="counter-title">Happy Clients</h4>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="call-to-action pull-down">
-                    <div class="outer-box">
-                        <div class="bg bg-pattern-3"></div>
-                        <div class="title-box">
-                            <h3 class="title">Let’s Discuss How to <br> Make your Business Better.</h3>
-                            <a href="page-about.html" title="" class="theme-btn btn-style-one dark-bg hover-light"><span
-                                    class="btn-title">discover more</span></a>
-                        </div>
-                        <div class="image-box">
-                            <span class="icon icon-bulb"></span>
-                            <figure class="image"><img
-                                    src="https://html.kodesolution.com/2023/disle-html/images/resource/woman.png"
-                                    alt=""></figure>
+                    <div class="call-to-action pull-down">
+                        <div class="outer-box">
+                            <div class="bg bg-pattern-3"></div>
+                            <div class="title-box">
+                                <h3 class="title">Let’s Discuss How to <br> Make your Business Better.</h3>
+                                <a href="page-about.html" title=""
+                                    class="theme-btn btn-style-one dark-bg hover-light"><span class="btn-title">discover
+                                        more</span></a>
+                            </div>
+                            <div class="image-box">
+                                <span class="icon icon-bulb"></span>
+                                <figure class="image"><img
+                                        src="https://html.kodesolution.com/2023/disle-html/images/resource/woman.png"
+                                        alt=""></figure>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
         <!-- End Fun Fact Section -->
 
